data/derived/comb/progs/unify/prog0565.ml.out
Characters 19-24:
  let g b = (b, (b = (f b)));;
                     ^^^^^
Error: This expression has type int * bool
       but an expression was expected of type int
